# geheimnisvollesquiz

./: .gitignore  README.md  pyproject.toml  quiz.spec
src/geheimnisvollesquiz/: quiz.py
